--- a/src/components/HomeForm.scss
+++ b/src/components/HomeForm.scss
@@ -22,6 +22,9 @@ $lightest-blue: #bbdcff;
     margin-left: auto;
     margin-right: auto;
     width: 540px;
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+    }
     .form-group {
       margin-right: 16px;
       input {
