--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -6,6 +6,9 @@ $light-blue: #67a4e5;
   background-size: cover;
   background-position-y: -80px;
   height: 100vh;
+  @media only screen and (max-width: 600px) {
+    height: 100%;
+  }
   .home-desc {
     margin-top: 100px;
     h4 {
@@ -21,6 +24,10 @@ $light-blue: #67a4e5;
       margin-top: 28px;
       color: $dark-blue;
       margin-bottom: 64px;
+    }
+    @media only screen and (max-width: 600px) {
+      position: relative;
+      right: 0px;
     }
   }
   .home-button {
