--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -12,7 +12,7 @@ $gray: #777777;
     margin-top: 16px;
     margin-left: auto;
     margin-right: auto;
-    width: 460px;
+    max-width: 460px;
     padding: 48px;
     background-color: $lightest-blue;
     border-radius: 32px;
