--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+a:hover{
+    text-decoration: none!important;
+}
+
 nav {
     padding-bottom: 0!important;
     background-color: white !important;
@@ -5,6 +9,12 @@ nav {
 
 nav img {
     width: 80%;
+}
+
+nav .active {
+    -moz-box-shadow: inset 0 -4px 0 #043D69;
+    -webkit-box-shadow: inset 0 -4px 0 #043D69;
+    box-shadow: inset 0 -4px 0 #043D69;
 }
 
 nav li {
@@ -15,20 +25,14 @@ nav li {
     transition: 1s;
 }
 
-nav a{
-    color: #292B2C!important;
-}
-
-nav .active {
-    -moz-box-shadow: inset 0 -4px 0 #043D69;
-    -webkit-box-shadow: inset 0 -4px 0 #043D69;
-    box-shadow: inset 0 -4px 0 #043D69;
-}
-
 nav li:hover {
     -moz-box-shadow: inset 0 -4px 0 #043D69;
     -webkit-box-shadow: inset 0 -4px 0 #043D69;
     box-shadow: inset 0 -4px 0 #043D69;
+}
+
+nav a{
+    color: #292B2C!important;
 }
 
 nav .active a,nav li:hover a {
@@ -109,6 +113,39 @@ footer a{
     color: black;
 }
 
-footera:hover{
+footer a:hover{
     color: #043D69;
+}
+
+.cari{
+    padding-left: 12vw!important;
+    padding-right: 12vw!important;
+}
+.cari .besar{
+    font-size: 3vw;
+    margin-top: 0;
+}
+
+.cari li{
+    margin-right: 2.4vw;
+}
+
+.cari li a{
+    color: black;
+}
+
+.rekomen-kerja p{
+    margin-bottom: 0;
+}
+
+.rekomen-kerja .besar{
+    font-size: 2vw;
+    margin-top: 0;
+}
+
+.card{
+    margin-bottom: 2vw;
+}
+.card p{
+    margin: 0;
 }
