--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-a:hover{
-    text-decoration: none!important;
+a:hover {
+    text-decoration: none !important;
 }
 
 nav {
-    padding-bottom: 0!important;
+    padding-bottom: 0 !important;
     background-color: white !important;
 }
 
@@ -18,10 +18,17 @@ nav .active {
 }
 
 nav li {
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    font-size: 1vw !important;
+    margin-right: 1.5vw;
+    transition: 1s;
+}
+
+nav li.cart {
     font-size: 1vw !important;
     padding-top: 1vw;
     padding-bottom: 1vw;
-    margin-right: 3vw;
     transition: 1s;
 }
 
@@ -31,12 +38,37 @@ nav li:hover {
     box-shadow: inset 0 -4px 0 #043D69;
 }
 
-nav a{
-    color: #292B2C!important;
+nav li.cart:hover {
+    box-shadow: none;
 }
 
-nav .active a,nav li:hover a {
+nav a {
+    color: #292B2C !important;
+}
+
+nav .active a,
+nav li:hover a {
     color: #043D69 !important;
+}
+
+nav .profile {
+    max-width: 20%;
+}
+
+.dropdown-menu {
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+    margin: 0 !important;
+    font-size: 0.94vw !important;
+}
+
+.dropdown-item:hover {
+    background-color: white !important;
+    color: #043D69 !important;
+}
+
+.navbar-light .navbar-toggler {
+    border-color: #043D69 !important;
 }
 
 .btndefault {
@@ -47,6 +79,7 @@ nav .active a,nav li:hover a {
 .btnghost {
     border: 1px solid #043D69 !important;
     color: #043D69;
+    transition: 2s;
 }
 
 .btndefault:hover {
@@ -58,217 +91,474 @@ nav .active a,nav li:hover a {
     color: white !important;
 }
 
-nav .btndefault,nav .btnghost {
+nav .btndefault,
+nav .btnghost {
     font-size: 1vw;
     padding-left: 2vw;
     padding-right: 2vw;
 }
 
-.row-abu{
+.row-abu {
     background: #F2F2F2;
     padding-top: 5vw;
     padding-bottom: 5vw;
 }
 
-.row-abu .besar,.row-putih .besar{
-    margin-top: 3vw;
-    font-size: 4vw;
+.home1 {
+    background: #F7F7F7 url("img/bg-home1.svg")no-repeat !important;
+    background-size: 100%;
 }
 
-.row-putih{
+.row-abu .besar,
+.row-putih .besar {
+    margin-bottom: 0;
+    margin-top: 4vw;
+    font-size: 4vw;
+    font-weight: 500;
+}
+
+.row-abu .kecil,
+.row-putih .kecil {
+    margin-top: 1vw;
+    font-size: 2vw;
+    color: #666666;
+    font-weight: 200;
+}
+
+.home1 .btn,
+.home2 .btn,
+.home3 .btn,
+.mulai .btn {
+    font-size: 1.7vw;
+    font-weight: 200;
+    border-radius: 5vw;
+    padding: 1vw 2vw;
+}
+
+.row-putih {
     background: white;
     padding-top: 5vw;
     padding-bottom: 5vw;
 }
 
-.kata{
-    padding: 5vw 10vw!important;
+.kata {
+    padding: 5vw 10vw !important;
 }
 
-.kata .besar{
-    font-size: 3vw;
+.kata p {
+    font-size: 1.7vw;
+}
+
+.kata .besar {
+    margin-bottom: 0;
+    font-size: 4vw;
+    font-weight: 500;
     margin-bottom: 4.5vw;
 }
-
-.kata .kecil{
+.kata .kecil {
     font-size: 1vw;
 }
 
-.mulai p{
+.mulai p {
     font-size: 2vw;
 }
 
-.mulai .besar{
+.mulai .besar {
     font-size: 3vw;
     margin-top: 0;
     margin-bottom: 0;
 }
 
-footer p{
+footer p {
     font-size: 0.68vw;
     margin-bottom: 0;
 }
 
-footer a{
-    font-size: 1vw;
-    color: black;
+footer a {
+    font-size: 0.99vw;
+    color: #666666;
 }
 
-footer a:hover{
+footer a:hover {
     color: #043D69;
 }
 
-.cari{
-    padding-left: 8vw!important;
-    padding-right: 8vw!important;
+.cari {
+    padding-left: 8vw !important;
+    padding-right: 8vw !important;
 }
-.cari .besar{
+
+.cari .besar {
     font-size: 3vw;
     margin-top: 0;
 }
 
-.cari li{
+.cari li {
     margin-right: 2.4vw;
 }
 
-.cari li a{
+.cari li a {
     color: black;
 }
 
-.rekomen p{
+.rekomen p {
     margin-bottom: 0;
 }
 
-.rekomen .besar{
+.rekomen .besar {
     font-size: 2vw;
     margin-top: 0;
 }
 
-.card{
+.rekomen .card {
     margin-bottom: 2vw;
 }
-.card p{
+
+.rekomen .card p {
     margin: 0;
+    font-size: 1vw;
 }
 
-.latihan li{
+.latihan li,
+.detailpelatihan-isi li {
     margin: 0.5vw 1vw 0.5vw 0;
     border: 1px solid #043D69 !important;
-    color: #043D69;
     border-radius: 2vw;
     padding: 0;
     height: 50%;
+    transition: 1s;
 }
 
-.latihan li a{
+.latihan li:hover,
+.detailpelatihan-isi li:hover {
+    background: #043D69;
+}
+
+.latihan li a,
+.detailpelatihan-isi li a {
     padding: 0.2vw 1vw;
+    color: #043D69;
 }
 
-.pelatihan .kategori{
+.latihan li a:hover,
+.detailpelatihan-isi li a:hover {
+    color: white;
+}
+
+.pelatihan .kategori {
     display: inline;
     font-size: 0.7vw;
     margin-right: 0.5vw;
-    color: black;
+    color: #666;
 }
 
-.pelatihan .harga1{
-    font-size: 1vw;
+.pelatihan .abu {
+    color: #666;
+    font-weight: 200;
+}
+
+.pelatihan .harga1 {
     text-decoration: line-through;
 }
 
-.pelatihan .harga2{
-    font-size: 1.2vw;
+.pelatihan .harga2 {
+    font-weight: 600;
+    font-size: 2vw;
 }
 
-.pelatihan .card-footer{
+.pelatihan .card-footer {
     background: white;
 }
 
-.pelatihan .card-footer img{
+.pelatihan .cardf-1 img {
     margin-right: 0.5vw;
     margin-bottom: 0.2vw;
 }
 
-.kotak-sign{
-    width: 40%!important;
+.pelatihan .cardf-2 img {
+    width: 40%;
+}
+
+.kotak-sign {
+    width: 40% !important;
     border: 1px solid #DDD;
     border-radius: 0.5vw;
 }
 
-.kotak-sign .judul{
+.kotak-sign .judul {
     font-size: 3vw;
 }
 
-.kotak-sign .lupa-pass{
+.kotak-sign .lupa-pass {
     color: #043D69;
 }
 
-.kotak-sign .form-check-label{
+.kotak-sign .form-check-label {
     font-size: 1vw;
 }
 
-.kotak-sign .btn{
+.kotak-sign .btn {
     padding-left: 4vw !important;
     padding-right: 4vw !important;
 }
 
-.kotak-sign .kecil{
+.kotak-sign .kecil {
     font-size: 1vw;
     display: inline;
 }
 
-.kotak-sign .normal{
+.kotak-sign .normal {
     display: inline;
     color: #043D69;
 }
 
-.row-abu2{
+.row-abu2 {
     background: #F9F9F9;
 }
 
-.row-abu2 p{
+.row-abu2 p {
     margin-bottom: 0;
     font-size: 1vw;
 }
 
-.row-abu2 img{
+.row-abu2 img {
     padding-bottom: 0.2vw;
 }
 
-.detailkerja-title .besar{
+.detailkerja-title .besar {
     font-size: 2vw;
     margin-top: 0;
     margin-bottom: 0;
 }
 
-.detailkerja-title .abu{
+.detailkerja-title .abu {
     color: #666666;
 }
 
-.detailkerja-title .harga-besar{
+.detailkerja-title .harga-besar {
     font-size: 3vw;
     margin-bottom: 0;
 }
 
-.detailkerja-title .harga-coret{
+.detailkerja-title .harga-coret {
     text-decoration: line-through;
     color: #666666;
 }
 
-.detailkerja-title .btn{
+.detailkerja-title .btnghost:hover {
+    background-color: transparent !important;
+}
+
+.detailkerja-title .btndefault {
     padding-left: 2.5vw !important;
     padding-right: 2.5vw !important;
 }
 
-.detailkerja-isi{
+.detailkerja-isi {
     border: 1px solid #DDD;
     border-radius: 0.5vw;
-    width: 70%!important;
-    margin-right: 100%!important;
+    width: 70% !important;
+    margin-right: 100% !important;
 }
 
-.detailkerja-isi .besar{
+.detailkerja-isi .besar,
+.detailpelatihan-isi .besar {
     margin-top: 0;
-    margin-bottom: 1vw!important;
+    margin-bottom: 1vw !important;
     font-size: 1.5vw;
+}
+
+.detailpelatihan-isi img {
+    max-width: 100%;
+}
+
+.detailpelatihan-isi .kecil {
+    margin-top: 0;
+    margin-bottom: 1vw !important;
+    font-size: 1vw;
+}
+
+.detailpelatihan-isi .coret {
+    text-decoration: line-through;
+}
+
+.dashboard .besar {
+    font-size: 2vw;
+}
+
+.dashboard .abu {
+    color: #666666;
+}
+
+.dashboard .top .btn {
+    background: #F7F7F7;
+    border-radius: 1vw;
+}
+
+.dashboard .top .besar {
+    color: #043D69;
+    margin-top: 0;
+    font-size: 1.2vw;
+}
+
+.dashboard .top .kecil {
+    color: #043D69;
+    font-size: 1vw;
+    margin: 0;
+}
+
+.dashboard .top .active {
+    background: #043D69;
+    border-radius: 1vw;
+}
+
+.dashboard .top .active p {
+    color: white;
+}
+
+.dashboard .isi {
+    border-radius: 1vw;
+    border: 1px solid #DDDDDD;
+}
+
+.dashboard .isi .kiri {
+    background: #043D69;
+    padding: 2vw;
+    border-radius: 1vw;
+    color: white;
+}
+
+.dashboard .isi .kiri p {
+    margin-bottom: 0;
+}
+
+.dashboard .isi .kiri .besar {
+    font-size: 1.5vw;
+    margin-top: 0;
+    margin-bottom: 0.5vw;
+}
+
+.dashboard .isi .kanan {
+    padding: 2vw 3vw;
+}
+
+.dashboard .isi .kanan .nama {
+    font-size: 3vw;
+    margin-top: 0;
+}
+
+.dashboard .isi .kanan .besar {
+    font-size: 1.5vw;
+    margin-top: 0;
+    margin-bottom: 0.5vw;
+}
+
+.dashboard .isi .kanan .card p {
+    font-size: 1vw;
+    margin-top: 0;
+}
+
+.dashboard .isi .kanan .card .besar {
+    font-size: 1.2vw;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.dashboard .isi .kanan .card .btn {
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 1vw;
+    background: #043D69;
+    color: white;
+}
+
+.disabled {
+    pointer-events: none;
+    background: #C4C4C4 !important;
+}
+
+.dashboard .isi .kanan .last p {
+    margin-bottom: 0;
+}
+
+.edit-atas {
+    width: 40% !important;
+}
+
+.edit-atas .angka .btn {
+    margin-right: 1vw;
+    width: 3vw !important;
+    padding: 0vw !important;
+    border-radius: 1.5vw;
+    background: #DDDDDD;
+    color: white;
+    font-size: 1.8vw;
+}
+
+.edit-atas .angka .active {
+    background: #043D69;
+}
+
+.form-profile {
+    width: 40% !important;
+    border: 1px solid #DDD;
+    border-radius: 0.5vw;
+}
+
+.form-profile .judul {
+    font-size: 3vw;
+}
+
+.form-profile .lupa-pass {
+    color: #043D69;
+}
+
+.form-profile .form-check-label {
+    font-size: 1vw;
+}
+
+.form-profile .btn {
+    padding-left: 4vw !important;
+    padding-right: 4vw !important;
+}
+
+.form-profile .kecil {
+    font-size: 1vw;
+    display: inline;
+}
+
+.form-profile .normal {
+    display: inline;
+    color: #043D69;
+}
+
+.form-profile .upload {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    filter: alpha(opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    opacity: 0;
+    background-color: transparent;
+    color: transparent;
+}
+
+.form-profile .label-info{
+    font-size: 0.8vw;
+}
+
+.form-profile small{
+    color: #818A91;
+}
+
+.form-profile .btnupload{
+    border: 1px solid #CCCCCC;
+    color: #999;
+    transition: 1s;
+}
+
+.form-profile .btnupload:hover{
+    background: #CCC;
+    color: white;
 }
