--- a/style-responsive.css
+++ b/style-responsive.css
@@ -11,15 +11,16 @@
     }
 
     nav li.cart {
-        text-align: left!important;
+        text-align: left !important;
         font-size: 1vw !important;
         padding-top: 1vw;
         padding-bottom: 1vw;
         transition: 1s;
     }
-    
+
     nav li.cart img {
-        max-height: 2vw;!important;
+        max-height: 2vw;
+         !important;
     }
 
     nav .profile {
@@ -260,6 +261,16 @@
         margin-bottom: 0;
     }
 
+    .detailkerja-title .oren {
+        font-size: 3vw;
+        color: #F0AD4E;
+    }
+
+    .detailkerja-title .cocok p,
+    .cocok a {
+        font-size: 1.1vw;
+    }
+
     .detailkerja-title .abu {
         font-size: 1.1vw;
         margin-bottom: 1vw;
@@ -304,6 +315,11 @@
 
     .detailpelatihan-isi p {
         max-width: 100%;
+    }
+
+    .detailkerja-isi p,
+    .detailpelatihan-isi p {
+        font-size: 1.3vw;
     }
 
     .detailkerja-isi .besar,
@@ -366,7 +382,7 @@
     .kotak-sign .normal {
         font-size: 1.5vw;
     }
-    
+
     .dashboard {
         width: 100%;
     }
@@ -388,12 +404,12 @@
         background: #F7F7F7;
         border-radius: 1vw;
     }
-    
+
     .dashboard .top img {
         max-width: 100%;
     }
-    
-    .dashboard .top .col-md-8{
+
+    .dashboard .top .col-md-8 {
         padding-left: 0;
     }
 
@@ -429,8 +445,8 @@
         border-radius: 1vw;
         color: white;
     }
-    
-    .dashboard .isi .kiri img{
+
+    .dashboard .isi .kiri img {
         max-width: 100%;
     }
 
@@ -463,7 +479,7 @@
     .dashboard .isi .kanan .card {
         height: 100%;
     }
-    
+
     .dashboard .isi .kanan .card p {
         font-size: 1vw;
         margin-top: 0;
@@ -474,9 +490,9 @@
         margin-top: 0;
         margin-bottom: 0;
     }
-    
-    .dashboard .btnghost{
-        font-size: 1.2vw!important;
+
+    .dashboard .btnghost {
+        font-size: 1.2vw !important;
         padding-left: 0.5vw;
         padding-right: 0.5vw;
     }
@@ -579,26 +595,40 @@
         background: #CCC;
         color: white;
     }
+
+    .dashboard-pelatihan .speaker-pic {
+        width: 20%;
+    }
+
+    .dashboard-pelatihan .angka {
+        color: #043D69;
+        font-size: 3vw;
+        margin-bottom: 0;
+    }
     
+    .dashboard-pelatihan .speaker-pic {
+        width: 20%;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
     nav li.cart {
-        text-align: left!important;
+        text-align: left !important;
         font-size: 1vw !important;
         padding-top: 1vw;
         padding-bottom: 1vw;
         transition: 1s;
     }
-    
+
     nav li.cart img {
-        max-height: 2vw;!important;
+        max-height: 2vw;
+         !important;
     }
 
     nav .profile {
         max-width: 4vw;
     }
-    
+
     .btndefault,
     .btnghost {
         font-size: 1.5vw !important;
@@ -653,9 +683,9 @@
     .kata .kecil {
         font-size: 1.5vw;
     }
-    
-    .kata img{
-        width: 15%!important;
+
+    .kata img {
+        width: 15% !important;
     }
 
     .mulai p {
@@ -666,9 +696,9 @@
         font-size: 2.99vw;
         margin-top: 0;
     }
-    
-    footer .justify-content-end{
-        justify-content:flex-start!important;
+
+    footer .justify-content-end {
+        justify-content: flex-start !important;
     }
 
     footer p {
@@ -691,8 +721,8 @@
         padding-left: 0vw !important;
         padding-right: 0vw !important;
     }
-    
-    .cari input{
+
+    .cari input {
         height: 100%;
     }
 
@@ -786,7 +816,7 @@
     .detailkerja-title img {
         max-width: 100%;
     }
-    
+
     .detailkerja-title .round-speaker img {
         width: 25%;
     }
@@ -800,6 +830,21 @@
         font-size: 2vw;
         margin-top: 0;
         margin-bottom: 0;
+    }
+
+    .detailkerja-title .oren {
+        font-size: 3vw;
+    }
+
+    .detailkerja-title .cocok img {
+        width: 4%;
+        margin-left: 0 !important;
+        margin-right: 5px !important;
+    }
+
+    .detailkerja-title .cocok p,
+    .cocok a {
+        font-size: 1.2vw;
     }
 
     .detailkerja-title .abu {
@@ -849,6 +894,11 @@
         font-size: 1.2vw;
     }
 
+    .detailkerja-isi p,
+    .detailpelatihan-isi p {
+        font-size: 1.3vw;
+    }
+
     .detailkerja-isi .besar,
     .detailpelatihan-isi .besar {
         margin-top: 0;
@@ -878,22 +928,22 @@
     .sub-modul .col-lg-3 img {
         width: 16%;
     }
-    
-    .sub-modul .text-right{
+
+    .sub-modul .text-right {
         padding-top: 2vw;
-        text-align: left!important;
+        text-align: left !important;
     }
-    
-    .sub-modul .harga{
+
+    .sub-modul .harga {
         text-align: left;
         margin-top: 1vw;
         font-size: 2vw;
         display: inline;
     }
-    
-    .sub-modul .btn{
-        margin-top: 0!important;
-        font-size: 1.2vw!important;
+
+    .sub-modul .btn {
+        margin-top: 0 !important;
+        font-size: 1.2vw !important;
         float: right;
     }
 
@@ -906,16 +956,16 @@
     .kotak-sign p {
         font-size: 1.5vw;
     }
-    
-    .kotak-sign .mb-5{
-        margin-bottom: 3vw!important;
+
+    .kotak-sign .mb-5 {
+        margin-bottom: 3vw !important;
     }
-    
-    .kotak-sign label{
+
+    .kotak-sign label {
         font-size: 1.5vw;
     }
-    
-    .kotak-sign input{
+
+    .kotak-sign input {
         font-size: 1.5vw;
     }
 
@@ -944,8 +994,8 @@
     .kotak-sign .normal {
         font-size: 1.5vw;
     }
-    
-    .dashboard{
+
+    .dashboard {
         max-width: 100%;
     }
 
@@ -966,12 +1016,12 @@
         background: #F7F7F7;
         border-radius: 1vw;
     }
-    
+
     .dashboard .top img {
         max-width: 100%;
     }
-    
-    .dashboard .top .col-sm-8{
+
+    .dashboard .top .col-sm-8 {
         padding-left: 0;
     }
 
@@ -1007,8 +1057,8 @@
         border-radius: 1vw;
         color: white;
     }
-    
-    .dashboard .isi .kiri img{
+
+    .dashboard .isi .kiri img {
         max-width: 100%;
     }
 
@@ -1041,11 +1091,11 @@
     .dashboard .isi .kanan .card {
         height: 100%;
     }
-    
+
     .dashboard .isi .kanan .card-body {
         padding: 1vw;
     }
-    
+
     .dashboard .isi .kanan .card p {
         font-size: 1vw;
         margin-top: 0;
@@ -1097,24 +1147,24 @@
         border: 1px solid #DDD;
         border-radius: 0.5vw;
     }
-    
-    .form-profile label{
+
+    .form-profile label {
         font-size: 1.5vw;
     }
-    
-    .form-profile input{
+
+    .form-profile input {
         font-size: 1.5vw;
     }
-    
-    .form-profile select{
+
+    .form-profile select {
         font-size: 1.5vw;
     }
-    
-    .form-profile textarea{
+
+    .form-profile textarea {
         font-size: 1.5vw;
     }
-    
-    .form-profile small{
+
+    .form-profile small {
         font-size: 1.2vw;
     }
 
@@ -1130,8 +1180,9 @@
         font-size: 1.5vw;
     }
 
-    .form-profile .btn, .btnedit {
-        font-size: 1.5vw!important;
+    .form-profile .btn,
+    .btnedit {
+        font-size: 1.5vw !important;
         padding-left: 4vw !important;
         padding-right: 4vw !important;
     }
@@ -1176,25 +1227,37 @@
         background: #CCC;
         color: white;
     }
+
+    .dashboard-pelatihan .angka {
+        color: #043D69;
+        margin-bottom: 0;
+        display: inline;
+        margin-right: 1vw;
+    }
+    
+    .dashboard-pelatihan .speaker-pic {
+        width: 20%;
+    }
 }
 
 @media (min-width: 320px) and (max-width: 576px) {
     nav li.cart {
-        text-align: left!important;
+        text-align: left !important;
         font-size: 1vw !important;
         padding-top: 1vw;
         padding-bottom: 1vw;
         transition: 1s;
     }
-    
+
     nav li.cart img {
-        max-height: 2vw;!important;
+        max-height: 2vw;
+         !important;
     }
 
     nav .profile {
         max-width: 4vw;
     }
-    
+
     .btndefault,
     .btnghost {
         font-size: 1.5vw !important;
@@ -1249,12 +1312,12 @@
     .kata .kecil {
         font-size: 1.7vw;
     }
-    
-    .kata img{
-        width: 15%!important;
+
+    .kata img {
+        width: 15% !important;
     }
-    
-    .mulai{
+
+    .mulai {
         padding-top: 4vw;
         padding-bottom: 4vw;
     }
@@ -1267,9 +1330,9 @@
         font-size: 2.99vw;
         margin-top: 0;
     }
-    
-    footer .justify-content-end{
-        justify-content:flex-start!important;
+
+    footer .justify-content-end {
+        justify-content: flex-start !important;
     }
 
     footer p {
@@ -1292,12 +1355,13 @@
         padding-left: 0vw !important;
         padding-right: 0vw !important;
     }
-    
-    .cari p,.cari a{
+
+    .cari p,
+    .cari a {
         font-size: 2vw;
     }
-    
-    .cari input{
+
+    .cari input {
         height: 90%;
     }
 
@@ -1340,13 +1404,13 @@
     }
 
     .pelatihan .harga1 {
-        font-size: 2vw!important;
+        font-size: 2vw !important;
         text-decoration: line-through;
     }
 
     .pelatihan .harga2 {
         font-weight: 600;
-        font-size: 2.4vw!important;
+        font-size: 2.4vw !important;
     }
 
     .pelatihan .card-footer {
@@ -1363,7 +1427,7 @@
     }
 
     .row-abu2 {
-        padding: 2vw!important;
+        padding: 2vw !important;
     }
 
     .row-abu2 p {
@@ -1378,7 +1442,7 @@
     .detailkerja-title img {
         max-width: 100%;
     }
-    
+
     .detailkerja-title .round-speaker img {
         width: 15%;
     }
@@ -1394,6 +1458,21 @@
         margin-bottom: 0;
     }
 
+    .detailkerja-title .oren {
+        font-size: 4vw;
+    }
+
+    .detailkerja-title .cocok img {
+        width: 4%;
+        margin-left: 0 !important;
+        margin-right: 5px !important;
+    }
+
+    .detailkerja-title .cocok p,
+    .cocok a {
+        font-size: 1.8vw;
+    }
+
     .detailkerja-title .abu {
         font-size: 1.8vw;
         margin-bottom: 1vw;
@@ -1406,7 +1485,7 @@
     }
 
     .detailkerja-title .d-inline {
-        font-size: 1.43vw!important;
+        font-size: 1.43vw !important;
     }
 
     .detailkerja-title .btnghost img {
@@ -1430,13 +1509,18 @@
         width: 100% !important;
         margin-right: 100% !important;
     }
-    
-    .detailkerja-isi p{
+
+    .detailkerja-isi p {
         font-size: 2vw;
     }
 
     .detailpelatihan-isi p {
         max-width: 100%;
+        font-size: 2vw;
+    }
+
+    .detailkerja-isi p,
+    .detailpelatihan-isi p {
         font-size: 2vw;
     }
 
@@ -1469,23 +1553,23 @@
     .sub-modul .col-lg-3 img {
         width: 16%;
     }
-    
-    .sub-modul .text-right{
+
+    .sub-modul .text-right {
         padding-top: 2vw;
-        text-align: left!important;
+        text-align: left !important;
     }
-    
-    .sub-modul .harga{
+
+    .sub-modul .harga {
         text-align: left;
         margin-top: 1vw;
         font-size: 3vw;
         display: inline;
-        margin-right: 2vw!important;
+        margin-right: 2vw !important;
     }
-    
-    .sub-modul .btn{
-        margin-top: 0!important;
-        font-size: 1.5vw!important;
+
+    .sub-modul .btn {
+        margin-top: 0 !important;
+        font-size: 1.5vw !important;
         float: right;
     }
 
@@ -1498,16 +1582,16 @@
     .kotak-sign p {
         font-size: 2vw;
     }
-    
-    .kotak-sign .mb-5{
-        margin-bottom: 3vw!important;
+
+    .kotak-sign .mb-5 {
+        margin-bottom: 3vw !important;
     }
-    
-    .kotak-sign label{
+
+    .kotak-sign label {
         font-size: 2vw;
     }
-    
-    .kotak-sign input{
+
+    .kotak-sign input {
         font-size: 2vw;
     }
 
@@ -1525,7 +1609,7 @@
     }
 
     .kotak-sign .btn {
-        font-size: 2vw!important;
+        font-size: 2vw !important;
         padding-left: 4vw !important;
         padding-right: 4vw !important;
     }
@@ -1555,12 +1639,12 @@
         background: #F7F7F7;
         border-radius: 1vw;
     }
-    
+
     .dashboard .top img {
         max-width: 20%;
     }
-    
-    .dashboard .top .col-12{
+
+    .dashboard .top .col-12 {
         text-align: center
     }
 
@@ -1596,13 +1680,13 @@
         border-radius: 1vw;
         color: white;
     }
-    
+
     .dashboard .isi .kiri .col-6 {
-        margin-bottom: 0!important;
-        padding: 3vw!important;
+        margin-bottom: 0 !important;
+        padding: 3vw !important;
     }
-    
-    .dashboard .isi .kiri img{
+
+    .dashboard .isi .kiri img {
         max-width: 30%;
     }
 
@@ -1620,16 +1704,16 @@
     .dashboard .isi .kanan {
         padding: 2vw 3vw;
     }
-    
-    .dashboard .isi .kanan .btnghost{
-        font-size: 2vw!important;
+
+    .dashboard .isi .kanan .btnghost {
+        font-size: 2vw !important;
     }
-    
-    .dashboard .isi .kanan  p{
+
+    .dashboard .isi .kanan p {
         font-size: 2vw;
     }
-    
-    .dashboard .isi .kanan .last a .sertif{
+
+    .dashboard .isi .kanan .last a .sertif {
         font-size: 1.5vw
     }
 
@@ -1644,10 +1728,11 @@
         margin-bottom: 0.5vw;
     }
 
-    .dashboard .isi .kanan .card-body,.dashboard .isi .kanan .card-footer  {
+    .dashboard .isi .kanan .card-body,
+    .dashboard .isi .kanan .card-footer {
         padding: 2vw;
     }
-    
+
     .dashboard .isi .kanan .card p {
         font-size: 1.8vw;
         margin-top: 0;
@@ -1699,24 +1784,24 @@
         border: 1px solid #DDD;
         border-radius: 0.5vw;
     }
-    
-    .form-profile label{
+
+    .form-profile label {
         font-size: 2vw;
     }
-    
-    .form-profile input{
+
+    .form-profile input {
         font-size: 2vw;
     }
-    
-    .form-profile select{
+
+    .form-profile select {
         font-size: 2vw;
     }
-    
-    .form-profile textarea{
+
+    .form-profile textarea {
         font-size: 2vw;
     }
-    
-    .form-profile small{
+
+    .form-profile small {
         font-size: 1.5vw;
     }
 
@@ -1728,8 +1813,9 @@
         color: #043D69;
     }
 
-    .form-profile .btn, .btnedit {
-        font-size: 2vw!important;
+    .form-profile .btn,
+    .btnedit {
+        font-size: 2vw !important;
     }
 
     .form-profile .kecil {
@@ -1773,4 +1859,11 @@
         color: white;
     }
     
+    .dashboard-pelatihan .angka {
+        color: #043D69;
+        margin-bottom: 0;
+        display: inline;
+        margin-right: 1vw;
+    }
+
 }
