--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav .navbar-brand img {
 nav form img {
     padding: 0 !important;
     margin-right: 1.5vw;
-    max-width: 47px!important;
+    max-width: 47px !important;
 }
 
 nav .active {
@@ -227,12 +227,12 @@ footer a:hover {
     font-size: 1vw;
 }
 
-.rekomen .card a{
-    color: black!important;
+.rekomen .card a {
+    color: black !important;
 }
 
-.rekomen .card a:hover{
-    color: #043D69!important;
+.rekomen .card a:hover {
+    color: #043D69 !important;
 }
 
 .latihan li,
@@ -356,6 +356,22 @@ footer a:hover {
     margin-bottom: 0;
 }
 
+.detailkerja-title .besar-dashboard {
+    font-size: 1.5vw;
+    margin-top: 0;
+    margin-bottom: 0.5vw;
+}
+
+.detailkerja-title .oren {
+    font-size: 3vw;
+    color: #F0AD4E;
+}
+
+.detailkerja-title .cocok {
+    font-size: 1vw;
+    color: #043D69;
+}
+
 .detailkerja-title .abu {
     color: #666666;
 }
@@ -365,8 +381,24 @@ footer a:hover {
     margin-bottom: 0;
 }
 
+.detailkerja-title .abu2 {
+    font-size: 3vw;
+    margin-bottom: 0;
+    color: #D9D9D9;
+}
+
+.detailkerja-title .biru {
+    font-size: 3vw;
+    margin-bottom: 0;
+    color: #043D69;
+}
+
 .detailkerja-title .harga-coret {
     text-decoration: line-through;
+    color: #666666;
+}
+
+.detailkerja-title .modul {
     color: #666666;
 }
 
@@ -614,4 +646,72 @@ footer a:hover {
 .form-profile .btnupload:hover {
     background: #CCC;
     color: white;
+}
+
+.dashboard-profile .card-body {
+    padding-bottom: 0;
+}
+
+.dashboard-profile .card-footer {
+    background: white;
+    border: 0;
+}
+
+.dashboard-profile .card .disabled {
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 1vw;
+    color: white !important;
+}
+
+.dashboard-pelatihan .speaker-pic {
+    height: 100%;
+}
+
+.dashboard-pelatihan .angka {
+    color: #043D69;
+    font-size: 3vw;
+    margin-bottom: 0;
+}
+
+.dashboard-pelatihan .angka .abu {
+    color: #DDD;
+}
+
+.garis-abu {
+    border: 1px solid #DDDDDD;
+}
+
+.pelatihan-detail .title-pelatihan {
+    margin-bottom: 0;
+    font-size: 2.3vw;
+}
+
+.pelatihan-detail .selesai {
+    border-radius: 0.5vw;
+    background: #F7F7F7;
+}
+
+.pelatihan-detail .selesai p {
+    margin-bottom: 0;
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+
+.pelatihan-detail .selesai .btn {
+    font-size: 1vw;
+}
+
+.pelatihan-detail .list {
+    border-radius: 0.5vw;
+    border: 1px solid #DDDDDD;
+    padding-top: 1.5vw;
+}
+
+.pelatihan-detail .list .detailing {
+    font-size: 0.7vw;
+}
+
+.pelatihan-detail .list .hijau{
+    color: #5CB85C;
 }
