--- a/style.css
+++ b/style.css
@@ -717,16 +717,24 @@ footer a:hover {
 }
 
 .img-frame{
-    width: 128px;
-    height: 128px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     overflow: hidden;
     border-radius: 128px;
+    height: 256px;
+    width: 256px;
 }
 
 .img-frame img{
-    max-height: 128px;
+    height: 256px;
 }
 
 .additional-ekskul .add-input{
     margin-top: 16px;
+}
+
+#nav-image{
+    height: 47px;
+    border-radius: 47px;
 }
